fix: align input backgrounds for code editors

--- a/public/sass/components/_slate_editor.scss
+++ b/public/sass/components/_slate_editor.scss
@@ -13,7 +13,7 @@
   cursor: text;
   line-height: $line-height-base;
   color: $text-color;
-  background-color: $panel-bg;
+  background-color: $input-bg;
   background-image: none;
   border: $panel-border;
   border-radius: $border-radius;
